--- a/bij.css
+++ b/bij.css
@@ -9,16 +9,16 @@ height: 100%;
 .tekst{
     background-color: orange;
     color: white;
-    height: 20%;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
     width: 90%;
-    margin-top: 8%;
+    margin-top: 6%;
 }
 .h1{
-    font-size: 5rem;
+    font-size: 45px;
     
 }
 .geheel{
